[package]
name = "telegram-all-in-voo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "uuid", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "formatting"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
pretty_env_logger = "0.5.0"

# Turn on LTO for a smaller release binary
[profile.release]
lto = true
codegen-units = 1
